feat: Add no-send fiat on/off-ramp quote previews (closes #201)
